[tool.poetry]
name = "bot-2"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
async-timeout = "^3.0.1"
emojis = "^0.6.0"
motor = "^2.3.1"
dblpy = "^0.4.0"
discord = "^1.0.1"
captcha = "^0.3"
youtube-dl = "^2021.3.31"
buttons = "^0.1.9"
DiscordUtils = "^1.2.8"
PyNaCl = "^1.4.0"
discordmongopy = "^0.3.0"
PyDictionary = "^2.0.1"
googletrans = "^3.0.0"
asyncpraw = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
